WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291588
AX: AXTextMarkerRange::toString shouldn't append list marker text for text markers that aren't directly adjacent to the marker
https://bugs.webkit.org/show_bug.cgi?id=291588
Summary
AX: AXTextMarkerRange::toString shouldn't append list marker text for text ma...
Tyler Wilcock
Reported
2025-04-15 13:38:22 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-15 13:38:36 PDT
<
rdar://problem/149327584
>
Tyler Wilcock
Comment 2
2025-04-15 13:44:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44114
EWS
Comment 3
2025-04-15 16:02:52 PDT
Committed
293736@main
(f588b9bc23d3): <
https://commits.webkit.org/293736@main
> Reviewed commits have been landed. Closing PR #44114 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug