AX: AXTextMarkerRange::toString shouldn't append list marker text for text markers that aren't directly adjacent to the marker https://bugs.webkit.org/show_bug.cgi?id=291588 rdar://149327584

Reviewed by Joshua Hoffman.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
Remove expected failure for accessibility/mac/text-marker-range-selection-in-list-items.html.
* Source/WebCore/accessibility/AXTextMarker.cpp:
(WebCore::listMarkerTextOnSameLine):
Use the marker offset to determine adjacency to the list marker, returning an empty string if not adjacent.

Canonical link: https://commits.webkit.org/293736@main